feat: add zh/en config,message; set llm system prompt and tts voice
Signed-off-by: weedge <weege007@gmail.com>

--- a/env.example
+++ b/env.example
@@ -1,2 +1,5 @@
-LANGUAGE=zh
+VITE_LANGUAGE=zh
 VITE_BASE_URL=http://0.0.0.0:4321/bot_join/chat-bot/DailyAsrRTVIBot
+
+#VITE_LANGUAGE=en
+#VITE_BASE_URL=http://0.0.0.0:4321/bot_join/chat-bot/DailyRTVIBot
