--- a/env.example
+++ b/env.example
@@ -1,5 +1,8 @@
+# for multi language :)
 VITE_LANGUAGE=zh
+#VITE_LANGUAGE=en
 VITE_BASE_URL=http://0.0.0.0:4321/bot_join/chat-bot/DailyAsrRTVIBot
 
+# just for en
 #VITE_LANGUAGE=en
 #VITE_BASE_URL=http://0.0.0.0:4321/bot_join/chat-bot/DailyRTVIBot
