--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*~
 # Logs
 logs
 *.log
@@ -26,3 +27,11 @@ dist-ssr
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
