change config use default en
Signed-off-by: weedge <weege007@gmail.com>

--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# for multi language :)
+# for multi language
 VITE_LANGUAGE=zh
 #VITE_LANGUAGE=en
 VITE_BASE_URL=http://0.0.0.0:4321/bot_join/chat-bot/DailyAsrRTVIBot
